# filament

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  memory_chat.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: black.yml  workflow.yml
app/: api.py  config.py  db.py  emoji_predictor.py  memory.py  memory_chat.py  models.py  spacy_extractor.py  util.py
app/tests/: test_api.py
data/: aiden_book.json
scripts/: memories_to_book.py
tests/: test_api.py
